build/resources/test/LO-2/ValidPrograms/test_62.lo
// *Good testcase*
// While loop
// main return value: 30
// Author: Fall 2021 TAs

int main() {
    int a, b;
    {
      a = 10;
      b = (10 + 20);

      while ((a<b)) {
        a = (a+1);
      }

      return a;
    }
}