build/resources/test/LO-2/InvalidPrograms/test_0.lo
// Missing return stmt

int main() {
    int a, b;
    {
        a = 1;
        b = 14368;
    }
}